--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
 }
+
 
 body {
     display: flex;
@@ -29,27 +31,42 @@ header {
     margin-bottom: 10px;
 }
 
+header h1 {
+    flex: 3;
+    text-align: center;
+    margin-left: 30px;
+}
+
+header p {
+    flex: 1;
+    text-align: left;
+    font-size: 30px;
+}
+
 #robot-choices {
     display: flex;
     flex-direction: column;
     width: 100%;
+    align-items: center;
+    justify-content: center;
 }
 
 .players {
     text-align: center;
     margin-bottom: 20px;
+    background-color: #FAEBD7;
 }
 
 .players.top {
     margin-top: 30px;
 }
 
-#robot-choices div {
+#robot-container {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
-    gap: 10px;
+    width: 100%;
 }
 
 #versus {
@@ -60,11 +77,14 @@ header {
     border-radius: 15px;
     padding: 10px;
     margin: 10px auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 img {
     height: 150px;
     width: 150px;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #human-choices {
@@ -80,4 +100,9 @@ img {
     justify-content: space-evenly;
     flex-direction: row;
     width: 100%;
+}
+
+#human-choices #button-container button {
+    border-radius: 15px;
+    border: none;
 }
